# pico_scheduling_projects

./: .gitignore  README.md
FreeRTOS-Kernel/examples/coverity/: FreeRTOSConfig.h
FreeRTOS-Kernel/include/: FreeRTOS.h  FreeRTOSConfig.h
led_blink/: CMakeLists.txt  main.c
led_task/: CMakeLists.txt  main.c
pico-sdk/src/rp2_common/pico_multicore/: multicore.c
pico-sdk/src/rp2_common/pico_multicore/include/pico/: multicore.h
smp_test/: CMakeLists.txt  main.c  task_manager.c  task_manager.h
